--- a/src/App.css
+++ b/src/App.css
@@ -30,21 +30,21 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
- top: 100px;
+  top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
   gap: 20px;
 }
 
 .landing_content {
- margin-top: 430px;
-  margin-left: 100px;
-  transform: translate(-50%, -50%);
+  /* margin-top: 430px; */
+  margin-left: 50px;
+  /* transform: translate(-50%, -50%); */
   z-index: 1;
   text-align: center;
-  /* background-color: red; */
-  width: 400px;
-  height: 400px;
+  /* background-color: blue; */
+  min-width: 400px;
+  min-height: 400px;
   display: flex;
   align-items: center;
   flex-direction: column;
